# underPINN

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
configs/: airfoil.yaml  burgers.yaml  heat_inverse.yaml  pipe_flow_unsteady_transfer.yaml
configs/sweeps/: burgers_nu_sweep.yaml  pipe_flow_re_sweep.yaml  wave_c_sweep.yaml
docs/: index.html
examples/K-Epsilon/: config.yaml  turbulence.py
examples/LDC/: config.yaml  re100.csv  run_ldc.py
examples/Lid Driven Cavity/: run_ldc.py
examples/airfoil/: airfoil_flow.py  config.yaml
examples/burgers/: burgers.py  burgers_nu_sweep.yaml  config.yaml
examples/heat/: forward.py  heat_forward.yaml  heat_inverse.yaml  inverse.py
examples/helmholtz/: config.yaml  helmholtz.py
examples/inverse/: config.yaml  inverse_diffusion.py
examples/ode/: config.yaml  ode_test.py
examples/pipe_flow/: pipe_flow.py  pipe_flow.yaml  pipe_flow_re_sweep.yaml  pipe_flow_unsteady_transfer.py
examples/ramp/: config.yaml  ramp.py
examples/transfer/: burgers_transfer.py  burgers_transfer.yaml  heat2d_transfer.py
examples/wave/: config.yaml  (+2 more)
tests/: test_callbacks.py  test_examples.py  test_losses.py  test_mlp_network.py  test_pde_signatures.py  test_resample.py  test_solver_make_opt.py  test_solver_state_naming.py  test_solver_train.py  test_training_config.py
underPINN/: __init__.py  __main__.py  _version.py
underPINN.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+76 files in other folders)
