[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "underPINN"
version = "0.1.0"
description = "Physics-Informed Neural Networks framework built on JAX/Flax"
requires-python = ">=3.9"
dependencies = [
    "jax[cpu]>=0.4.26",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "shapely>=2.0",
    "pandas>=2.0",
]

[project.scripts]
underpinn = "underPINN.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["underPINN*"]
