[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name        = "underPINN"
dynamic     = ["version"]        # resolved from underPINN/_version.py at build time
description = "Physics-Informed Neural Networks framework built on JAX/Flax"
requires-python = ">=3.9"
dependencies = [
    "jax[cpu]>=0.4.26",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "shapely>=2.0",
    "pandas>=2.0",
]

# Calendar versioning: YYMM — e.g. May 2026 → "2605"
# Wheel:      underPINN-2605-py3-none-any.whl
# dist-info:  underPINN-2605.dist-info/
# pip show:   Version: 2605
[tool.setuptools.dynamic]
version = {attr = "underPINN._version.__version__"}

[project.scripts]
underpinn = "underPINN.__main__:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["underPINN*"]
